# gpu_cpu_performance_comparison

./: CMakeLists.txt  README.md
CpuComputing/: CMakeLists.txt
CpuComputing/include/: cpu_helper_api.h  thread_pool.h
CpuComputing/src/: cpu_export_api.cpp  cpu_helper_api.cpp
GpuComputing/: CMakeLists.txt
GpuComputing/include/: gpu_kernel.h
GpuComputing/src/: kernel.cu
cpu_computing/: CMakeLists.txt
cpu_computing/include/: cpu_export_api.h  cpu_helper_api.h  thread_pool.h
cpu_computing/src/: cpu_export_api.cpp  cpu_helper_api.cpp
gpu_computing/: CMakeLists.txt
gpu_computing/include/: gpu_kernel.h
gpu_computing/src/: kernel.cu
include/: helpers.h  matrix.h
src/: main.cpp
test_runner/: CMakeLists.txt
test_runner/include/: correctness_cpu_calculations_test.h  correctness_gpu_calculations_test.h  itest_case.h  pimpl_helper.h  test_cases.h  test_runner.h  thread_pool_destruction_test.h  thread_pool_execution_test.h  thread_pool_watch_dog_test.h
test_runner/src/: correctness_cpu_calculations_test.cpp  correctness_gpu_calculations_test.cpp  main.cpp  test_cases.cpp  test_runner.cpp  thread_pool_destruction_test.cpp  thread_pool_execution_test.cpp  thread_pool_watch_dog_test.cpp
